@@ -1170,7 +1170,7 @@ void init_sb_vol_table(void)
 	int i;
 	
 	for (i = 0; i < 1024; i++)
-		sb_vol_table[i] = 1 / pow(10.0, (1023 - i) / 400.0);
+		sb_vol_table[i] = pow(10.0, (double)(1023 - i) * 960.0 / 1023.0 / -200.0);
 }
 
 FLOAT_T cb_to_amp_table[961] = 
@@ -1298,3 +1298,23 @@ FLOAT_T cb_to_amp_table[961] =
     0.015625, 
 };
 
+/* Reverb Time in sec */
+FLOAT_T reverb_time_table[128] = 
+{
+    0.300000, 0.318750, 0.337500, 0.356250, 0.375000, 0.393750, 0.412500, 0.431250, 
+    0.450000, 0.468750, 0.487500, 0.506250, 0.525000, 0.543750, 0.562500, 0.581250, 
+    0.600000, 0.618750, 0.637500, 0.656250, 0.675000, 0.693750, 0.712500, 0.731250, 
+    0.750000, 0.768750, 0.787500, 0.806250, 0.825000, 0.843750, 0.862500, 0.881250, 
+    0.900000, 0.918750, 0.937500, 0.956250, 0.975000, 0.993750, 1.012500, 1.031250, 
+    1.050000, 1.068750, 1.087500, 1.106250, 1.125000, 1.143750, 1.162500, 1.181250, 
+    1.200000, 1.218750, 1.237500, 1.256250, 1.275000, 1.293750, 1.312500, 1.331250, 
+    1.350000, 1.368750, 1.387500, 1.406250, 1.425000, 1.443750, 1.462500, 1.481250, 
+    1.500000, 1.600000, 1.700000, 1.800000, 1.900000, 2.000000, 2.100000, 2.200000, 
+    2.300000, 2.400000, 2.500000, 2.600000, 2.700000, 2.800000, 2.900000, 3.000000, 
+    3.100000, 3.200000, 3.300000, 3.400000, 3.500000, 3.600000, 3.700000, 3.800000, 
+    3.900000, 4.000000, 4.100000, 4.200000, 4.300000, 4.400000, 4.500000, 4.600000, 
+    4.700000, 4.800000, 4.900000, 5.000000, 5.100000, 5.200000, 5.300000, 5.400000, 
+    5.500000, 5.600000, 5.700000, 5.800000, 5.900000, 6.000000, 6.100000, 6.200000, 
+    6.300000, 6.400000, 6.500000, 6.600000, 6.700000, 6.800000, 6.900000, 7.000000, 
+    7.100000, 7.200000, 7.300000, 7.400000, 7.500000, 7.600000, 7.700000, 7.800000, 
+};
